<!-- Copyright (C) 2015 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Scores</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_match_list">Matches Played</string>

    <string name="team_a">Team A</string>
    <string name="_0">0</string>
    <string name="_3_points">+3 Points</string>
    <string name="_2_points">+2 Points</string>
    <string name="free_throw">Free throw</string>
    <string name="team_b">Team B</string>
    <string name="save">Save</string>
    <string name="teams_playing">Enter The names of the teams Playing</string>
    <string name="first_teams_s_name">Enter first teams\'s name</string>
    <string name="opponent_teams_s_name">Enter Opponent teams\'s name</string>
    <string name="confirm">Confirm</string>
</resources>
